# blog

./: 404.html  Makefile  index.html  install.sh  mkdocs.yml  requirements.txt  sitemap.xml
LICENSE/: index.html
Linux/N持久模式/: index.html
Linux/waydroid-折腾/: index.html
blog-lab/meta模板/: index.html
blog-lab/图像样式/: index.html
blog-lab/黑幕/: index.html
build-a-website/DDNS/: index.html
build-a-website/避免笔记本休眠/: index.html
css/: heimu.css  img.css
docs/: .pages  LICENSE.md  README.md  tag-index.md
docs/Linux/: .pages  N持久模式.md  Sqlite-as-filesystem.txt  waydroid-折腾.md
docs/blog-lab/: meta模板.md  图像样式.md  黑幕.md
docs/build-a-website/: DDNS.md  避免笔记本休眠.md
docs/css/: img.css
docs/network/: 小米路由器AX6S折腾.md
docs/python/: conda-推荐配置.md  pytest-cov-使用.md  python-最小化打包.md  虚拟环境比较.md
docs/win-tricks/: Hyper-v 无法添加外部交换机.md  auto-start.md  baiduyun-starter.md  pwsh-snippet.md  run-silently.md  win-计划任务.md  使用rclone挂载硬盘.md  应用推荐.md
hooks/: g.py  on_config.py  on_env.py  on_nav.py  on_page_context.py  on_page_markdown.py  statistics.py
network/小米路由器AX6S折腾/: index.html
overrides/: article_excerpt.html  home.html
overrides/partials/: comments.html  copyright.html  tags.html
plugin/: README.md  pyproject.toml  setup.cfg
plugin/hello_plugin/: __init__.py  hello.py
plugin/mkdocs_excerpt_plugin/: ExcerptPlugin.py  __init__.py
plugin/mkdocs_jcavmeta_plugin/: JCavMetaPlugin.py  __init__.py
plugin/mkdocs_statistics_plugin/: StatisticsPlugin.py  __init__.py
python/conda-推荐配置/: index.html
search/: search_index.json
tag-index/: index.html
(+36 files in other folders)
