[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jcav-blog-plugin"
version = "0.0.1"
authors = [
  { name="JCav", email="micojcav@outlook.com" },
]
description = "Plugins for my personal blog"

[project.urls]
"Blog"     = "https://blog.gjm20.top"
"Homepage" = "https://github.com/GJCav/blog"


[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]
include = ["*_plugin"]
exclude = []
namespaces = false